--- a/src/main/resources/templates/mahasiswa/detail_form.html
+++ b/src/main/resources/templates/mahasiswa/detail_form.html
@@ -29,7 +29,7 @@
         </tr>
         </tbody>
     </table>
-    <a th:href="@{/index}" class="btn btn-primary">Kembali</a>
+    <a th:href="@{/}" class="btn btn-primary">Kembali</a>
 </div>
 </body>
 </html>
