--- a/src/main/resources/templates/mahasiswa/form.html
+++ b/src/main/resources/templates/mahasiswa/form.html
@@ -9,18 +9,18 @@
 <body>
 <div class="container">
     <h4 class="mt-3">Tambah/Edit Mahasiswa</h4>
-    <form method="post" class="needs-validation" novalidate>
-        <input type="hidden">
+    <form method="post" th:object="${mahasiswa}" th:action="@{/mahasiswa/form}" class="needs-validation" novalidate>
+        <input type="hidden" th:field="*{id}">
         <div class="form-group">
             <label for="nim" class="col-form-label">Nim</label>
-            <input type="text" class="form-control" id="nim" placeholder="Nim mahasiswa" required>
+            <input type="text" class="form-control" id="nim" th:field="*{nim}" placeholder="Nim mahasiswa" required>
             <div class="invalid-feedback">
                 Nim tidak boleh kosong.
             </div>
         </div>
         <div class="form-group">
             <label for="nama" class="col-form-label">Nama</label>
-            <input type="text" class="form-control" id="nama" placeholder="Nama mahasiswa"
+            <input type="text" class="form-control" id="nama" th:field="*{nama}" placeholder="Nama mahasiswa"
                    required>
             <div class="invalid-feedback">
                 Nama tidak boleh kosong.
@@ -28,13 +28,13 @@
         </div>
         <div class="form-group">
             <label for="ipk" class="col-form-label">IPK</label>
-            <input type="number" step="any" class="form-control" id="ipk"
+            <input type="number" step="any" class="form-control" id="ipk" th:field="*{ipk}"
                    placeholder="IPK mahasiswa"
                    required>
         </div>
         <div class="form-group">
             <label for="jurusan" class="col-form-label">Jurusan</label>
-            <input type="text" class="form-control" id="jurusan"
+            <input type="text" class="form-control" id="jurusan" th:field="*{jurusan}"
                    placeholder="Jurusan mahasiswa" required>
             <div class="invalid-feedback">
                 Jurusan tidak boleh kosong.
@@ -42,14 +42,14 @@
         </div>
         <button type="submit" class="btn btn-primary mb-3">Submit</button>
 
-<!--        <div th:if="${#fields.hasErrors('all')}">-->
-<!--            <div class="form-group">-->
-<!--                <div class="alert alert-warning alert-dismissible fade show">-->
-<!--                    <label th:errors="*{all}">xxx</label>-->
-<!--                    <button type="button" class="close" data-dismiss="alert">&times;</button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div th:if="${#fields.hasErrors('all')}">
+            <div class="form-group">
+                <div class="alert alert-warning alert-dismissible fade show">
+                    <label th:errors="*{all}">xxx</label>
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                </div>
+            </div>
+        </div>
     </form>
 </div>
 </body>
